tests/dataset/tpc-ds/compiler/cpp/q1.error
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:75:12: error: ‘sr’ was not declared in this scope
   75 |   decltype(sr.sr_customer_sk) customer_sk;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:75:12: error: ‘sr’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:76:12: error: ‘sr’ was not declared in this scope
   76 |   decltype(sr.sr_store_sk) store_sk;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:76:12: error: ‘sr’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:79:12: error: ‘sr’ was not declared in this scope
   79 |   decltype(sr) sr;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:79:12: error: ‘sr’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:80:12: error: ‘d’ was not declared in this scope
   80 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:80:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:235:23: error: no match for ‘operator==’ (operand types are ‘CustomerTotalReturn’ and ‘CustomerTotalReturn’)
  235 |           if (__g.key == __key) {
      |               ~~~~~~~ ^~ ~~~~~
      |                   |      |
      |                   |      CustomerTotalReturn
      |                   CustomerTotalReturn
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:236:43: error: cannot convert ‘StoreReturn’ to ‘int’ in initialization
  236 |             __g.items.push_back(__struct6{sr, d});
      |                                           ^~
      |                                           |
      |                                           StoreReturn
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:243:65: error: cannot convert ‘StoreReturn’ to ‘int’ in initialization
  243 |               __struct7{__key, std::vector<__struct6>{__struct6{sr, d}}});
      |                                                                 ^~
      |                                                                 |
      |                                                                 StoreReturn
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:243:71: error: no matching function for call to ‘std::vector<__struct6>::vector(<brace-enclosed initializer list>)’
  243 |               __struct7{__key, std::vector<__struct6>{__struct6{sr, d}}});
      |                                                                       ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; value_type = std::vector<__struct6>::value_type; allocator_type = std::allocator<__struct6>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; allocator_type = std::allocator<__struct6>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:253:60: error: ‘struct __struct6’ has no member named ‘sr_return_amt’
  253 |             std::vector<decltype(std::declval<__struct6>().sr_return_amt)>
      |                                                            ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:253:60: error: ‘struct __struct6’ has no member named ‘sr_return_amt’
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:253:74: error: template argument 1 is invalid
  253 |             std::vector<decltype(std::declval<__struct6>().sr_return_amt)>
      |                                                                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:253:74: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:256:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  256 |               __items.push_back(x.sr_return_amt);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:256:35: error: ‘struct __struct6’ has no member named ‘sr_return_amt’
  256 |               __items.push_back(x.sr_return_amt);
      |                                   ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:252:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:251:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  251 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:251:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  251 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:262:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<__struct6>’ requested
  226 |   std::vector<__struct6> customer_total_return = ([&]() {
      |                                                  ~~~~~~~~
  227 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  228 |     for (auto sr : store_returns) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  229 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  230 |         if (!(((sr.sr_returned_date_sk == d.d_date_sk) && (d.d_year == 1998))))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  231 |           continue;
      |           ~~~~~~~~~
  232 |         auto __key = CustomerTotalReturn{sr.sr_customer_sk, sr.sr_store_sk};
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  233 |         bool __found = false;
      |         ~~~~~~~~~~~~~~~~~~~~~
  234 |         for (auto &__g : __groups) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  235 |           if (__g.key == __key) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  236 |             __g.items.push_back(__struct6{sr, d});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  237 |             __found = true;
      |             ~~~~~~~~~~~~~~~
  238 |             break;
      |             ~~~~~~
  239 |           }
      |           ~
  240 |         }
      |         ~
  241 |         if (!__found) {
      |         ~~~~~~~~~~~~~~~
  242 |           __groups.push_back(
      |           ~~~~~~~~~~~~~~~~~~~
  243 |               __struct7{__key, std::vector<__struct6>{__struct6{sr, d}}});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  244 |         }
      |         ~
  245 |       }
      |       ~
  246 |     }
      |     ~
  247 |     std::vector<__struct8> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  248 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  249 |       __items.push_back(__struct8{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  250 |           g.key.customer_sk, g.key.store_sk, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  251 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  252 |           })(([&]() {
      |           ~~~~~~~~~~~
  253 |             std::vector<decltype(std::declval<__struct6>().sr_return_amt)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  254 |                 __items;
      |                 ~~~~~~~~
  255 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  256 |               __items.push_back(x.sr_return_amt);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  257 |             }
      |             ~
  258 |             return __items;
      |             ~~~~~~~~~~~~~~~
  259 |           })())});
      |           ~~~~~~~~
  260 |     }
      |     ~
  261 |     return __items;
      |     ~~~~~~~~~~~~~~~
  262 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:265:18: error: ‘c’ was not declared in this scope
  265 |         decltype(c.c_customer_id),
      |                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:266:75: error: template argument 2 is invalid
  266 |         decltype(std::unordered_map<std::string, decltype(c.c_customer_id)>{
      |                                                                           ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:266:75: error: template argument 5 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:266:9: error: template argument 1 is invalid
  266 |         decltype(std::unordered_map<std::string, decltype(c.c_customer_id)>{
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  267 |             {std::string("c_customer_id"), c.c_customer_id}})>>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:266:9: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:267:62: error: template argument 1 is invalid
  267 |             {std::string("c_customer_id"), c.c_customer_id}})>>
      |                                                              ^~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:267:62: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:271:21: error: ‘struct __struct6’ has no member named ‘ctr_store_sk’
  271 |         if (!((ctr1.ctr_store_sk == s.s_store_sk)))
      |                     ^~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:274:23: error: ‘struct __struct6’ has no member named ‘ctr_customer_sk’
  274 |           if (!((ctr1.ctr_customer_sk == c.c_customer_sk)))
      |                       ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:276:24: error: ‘struct __struct6’ has no member named ‘ctr_total_return’
  276 |           if (!(((ctr1.ctr_total_return >
      |                        ^~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:279:61: error: ‘struct __struct6’ has no member named ‘ctr_total_return’
  279 |                          decltype(std::declval<__struct6>().ctr_total_return)>
      |                                                             ^~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:279:61: error: ‘struct __struct6’ has no member named ‘ctr_total_return’
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:279:78: error: template argument 1 is invalid
  279 |                          decltype(std::declval<__struct6>().ctr_total_return)>
      |                                                                              ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:279:78: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:282:36: error: ‘struct __struct6’ has no member named ‘ctr_store_sk’
  282 |                        if (!((ctr1.ctr_store_sk == ctr2.ctr_store_sk)))
      |                                    ^~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:282:57: error: ‘struct __struct6’ has no member named ‘ctr_store_sk’
  282 |                        if (!((ctr1.ctr_store_sk == ctr2.ctr_store_sk)))
      |                                                         ^~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:284:32: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  284 |                        __items.push_back(ctr2.ctr_total_return);
      |                                ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:284:47: error: ‘struct __struct6’ has no member named ‘ctr_total_return’
  284 |                        __items.push_back(ctr2.ctr_total_return);
      |                                               ^~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:277:25: error: no matching function for call to ‘__avg(int)’
  277 |                   (__avg(([&]() {
      |                    ~~~~~^~~~~~~~~
  278 |                      std::vector<
      |                      ~~~~~~~~~~~~
  279 |                          decltype(std::declval<__struct6>().ctr_total_return)>
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  280 |                          __items;
      |                          ~~~~~~~~
  281 |                      for (auto ctr2 : customer_total_return) {
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  282 |                        if (!((ctr1.ctr_store_sk == ctr2.ctr_store_sk)))
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  283 |                          continue;
      |                          ~~~~~~~~~
  284 |                        __items.push_back(ctr2.ctr_total_return);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  285 |                      }
      |                      ~   
  286 |                      return __items;
      |                      ~~~~~~~~~~~~~~~
  287 |                    })()) *
      |                    ~~~~~ 
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:91:30: note: candidate: ‘template<class T> double __avg(const std::vector<T>&)’
   91 | template <typename T> double __avg(const std::vector<T> &v) {
      |                              ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:91:30: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:277:25: note:   mismatched types ‘const std::vector<T>’ and ‘int’
  277 |                   (__avg(([&]() {
      |                    ~~~~~^~~~~~~~~
  278 |                      std::vector<
      |                      ~~~~~~~~~~~~
  279 |                          decltype(std::declval<__struct6>().ctr_total_return)>
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  280 |                          __items;
      |                          ~~~~~~~~
  281 |                      for (auto ctr2 : customer_total_return) {
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  282 |                        if (!((ctr1.ctr_store_sk == ctr2.ctr_store_sk)))
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  283 |                          continue;
      |                          ~~~~~~~~~
  284 |                        __items.push_back(ctr2.ctr_total_return);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  285 |                      }
      |                      ~   
  286 |                      return __items;
      |                      ~~~~~~~~~~~~~~~
  287 |                    })()) *
      |                    ~~~~~ 
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:291:19: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  291 |           __items.push_back(
      |                   ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:298:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  298 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:298:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  298 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:301:75: error: template argument 2 is invalid
  301 |         decltype(std::unordered_map<std::string, decltype(c.c_customer_id)>{
      |                                                                           ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:301:75: error: template argument 5 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:302:62: error: template argument 1 is invalid
  302 |             {std::string("c_customer_id"), c.c_customer_id}})>
      |                                                              ^
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:302:62: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:304:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  304 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:304:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  304 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq12050320517/001/prog.cpp:305:13: error: request for member ‘push_back’ in ‘__res’, which is of non-class type ‘int’
  305 |       __res.push_back(p.second);
      |             ^~~~~~~~~
